--- a/analysis/aux_files/columns_desy3_rm.yaml
+++ b/analysis/aux_files/columns_desy3_rm.yaml
@@ -7,7 +7,7 @@ DEC      : DEC
 redshift : Z_LAMBDA
 M200_true: LAMBDA_CHISQ
 R200_true: R_LAMBDA
-tile     : hpx2
+tile     : tile
 
 # master_columns
 ---
