--- a/analysis/aux_files/config_desy3_spt.yaml
+++ b/analysis/aux_files/config_desy3_spt.yaml
@@ -1,15 +1,15 @@
 ##### Buzzard v2.0 imput files
 ## copacabana master files
-members_infile   : /data/des61.a/data/johnny/DESY3/data/cutouts/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_full_hpx8_{:05d}.hdf5
-cluster_infile   : /data/des61.a/data/johnny/DESY3/data/cutouts/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_full.fits
-master_outfile   : /data/des61.a/data/johnny/DESY3/data/output/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_full_copa_v2.1_{:05d}.hdf5
+members_infile   : /data/des61.a/data/johnny/DESY3/desy3/data/spt/cutouts/y3_gold_2.2.1_wide_sofcol_run_join_2500d_sptecs_hpx2_{:05d}.hdf5
+cluster_infile   : /data/des61.a/data/johnny/DESY3/desy3/data/spt/join_2500d_sptecs.fits
+master_outfile   : /data/des61.a/data/johnny/DESY3/desy3/data/spt/output/3_gold_2.2.1_wide_sofcol_run_join_2500d_sptecs_full_copa_v2.1_{:05d}.hdf5
 columns_yaml_file: /data/des61.a/data/johnny/DESY3/projects/CopacabanaRuns/analysis/aux_files/columns_desy3_rm.yaml
 pixelmap_file    : 
 
 
 ######## copa setup #######
 zmin_gal: 0.0
-zmax_gal: 1.5
+zmax_gal: 1.9
 dz_max  : 0.3
 
 ## radial cuts
@@ -37,13 +37,11 @@ copa_number_of_chunks: 100
 # 2nd model: a gaussian distribution centered on zcls+bias with a std dependeding on redshift
 # 2nd model is a text file with: z, bias, std
 z_window     : 0.03
-z_model_file : /data/des61.a/data/johnny/DESY3/projects/CopacabanaRuns/analysis/aux_files/modelDNF_correction_z_gold_2_2.txt
+z_model_file : /data/des61.a/data/johnny/DESY3/projects/CopacabanaRuns/analysis/aux_files/spt_ecs_2500d_correction.txt
 
 ## Healpixel config
 healpixel_setup : True
-# healpixel_list  : [262, 727, 752]
-healpixel_list  : [   0,   2, 256, 257, 259, 260, 261, 262, 263, 269, 271, 272, 273, 274, 275, 276, 277, 278, 279, 280, 281, 282, 283, 284, 285, 286, 291, 292, 293, 294, 295, 296, 297, 298, 299, 300]
-
+healpixel_list  : [16,20,32,33,34,35,38,44,45,46]
 ## for the whole sample use the pixel list below
 
 
